# cs438-final-pcd-stream

./: .gitignore  CMakeLists.txt  Cholera.urdf  README.md  extract_transforms.py  intrinsics.txt  test.cpp  vis_pcd.py
Cholera/: base_link.STL  head_base_link.STL  head_neck2_link.STL  left_EE_link.STL  left_base_link.STL  left_forearm_link.STL  left_shoulder_link.STL  left_tool_link.STL  left_upperarm_link.STL  left_wrist1_link.STL  left_wrist2_camera_link.STL  left_wrist2_link.STL  right_EE_link.STL  right_base_link.STL  right_forearm_link.STL  right_shoulder_link.STL  right_sucker_link.STL  right_tool_link.STL  right_upperarm_link.STL  right_wrist1_link.STL  right_wrist2_camera_link.STL  right_wrist2_link.STL  torso_link.STL
data/: README.md
include/: packet.h  point.h  v_grid.h
src/: point.cpp  receiver.cpp  sender.cpp  v_grid.cpp
