cmake_minimum_required(VERSION 2.8)
project( PCD_SR )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( test test.cpp )
target_link_libraries( test ${OpenCV_LIBS} )

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
include_directories(include)
add_executable(sender src/sender.cpp src/v_grid.cpp src/point.cpp)
target_link_libraries( sender ${OpenCV_LIBS} )
add_executable(receiver src/receiver.cpp src/v_grid.cpp src/point.cpp)
